fixing column width on small screens in data.html

--- a/style.css
+++ b/style.css
@@ -105,3 +105,7 @@ a:hover {
 .navbar-right {
   float: right!important;
 }
+
+.table{
+  font-size: 75%;
+}
